--- a/_config.yml
+++ b/_config.yml
@@ -3,18 +3,18 @@ title: BoHu
 url: "http://zhaoyuxiang.cn/blog"    # the protocol and hostname of your site, eg. `http://zhaoyuxiang.cn/blog`
 baseurl: "/bohu-jekyll-theme" # the prefix of your site uri, eg. `/bohu-jekyll-theme` or just one slash `/`
 #timezone: Asia/Shanghai
-description: 天道总司的个人博客网站,前端HTML、HTML5、CSS、CSS3、JavaScript、JQuery等编程经验总结分享。
+description: 无。畏的个人博客网站。
 # Your information
 email: me@zhaoyuxiang.cn
-author: Clark #yourname #天道总司
-place: yourhometown #杭州
+author: Clark #yourname #无。畏
+place: yourhometown #大连
 domain: yourdoamain #互联网
 company: yourcompany #Jeeyoo
 position: yourjob #Technical Support
-school: yourschool #浙江科技学院
-major: yourmajoy #测控技术与仪器
+school: yourschool #大连理工大学
+major: yourmajoy #软件工程
 resume: "http://zhaoyuxiang.cn/cv"
-profile: Time is money. #yourmotto #聪明在于勤奋，天才在于积累。
+profile: Time is money. #yourmotto #伟大的程序员。
 twitter_username: zyx19936688
 weibo_username:  zhaoyuxiang
 github_username:  Clark-Zhao
